[package]
name = "rusty-monkey"
version = "0.1.0"
authors = ["Bruno Andreotti <bandreotti@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.1.2"
rustyline-derive = "0.3.1"
colored = "1.9.3"
